2009-10-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCompCmds.c: [Bug 2881263] (TclCompileForeachCmd,
	TclCompileLindexCmd): Fixed. Moved the use of
	DefineLineInformation after all regular variable declarations, so
	that an empty statement (-UTIP_280) doesn't confuse c89 compilers.

	* library/platform/pkgIndex.tcl: Backported the platform packages
	* library/platform/platform.tcl: from head and8.5 into the 8.4
	* library/platform/shell.tcl: branch. Updated makefiles to install
	* unix/Makfile.in: the packages.
	* win/Makefile.in:

	* generic/tclIO.c (FlushChannel): Skip OutputProc for low-level
	0-length writes. When closing pipes which have already been closed
	not skipping leads to spurious SIG_PIPE signals. Reported by
	Mikhail Teterin <mi+thun@aldan.algebra.com>.

2009-10-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclPosixStr.c: [Bug 2882561]: Work around oddity on Haiku OS
	where SIGSEGV and SIGBUS are the same value.

2009-10-18  Joe Mistachkin  <joe@mistachkin.com>

	* tests/thread.test (thread-4.[345]): [Bug 1565466]: Correct tests to
	save their error state before the final call to threadReap just in case
	it triggers an "invalid thread id" error.  This error can occur if one
	or more of the target threads has exited prior to the attempt to send
	it an asynchronous exit command.

2009-10-04  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXBundle.c:	Workaround CF memory managment bug in
	* unix/tclUnixInit.c:		Mac OS X 10.4 & earlier. [Bug 2569449]

2009-09-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclAlloc.c:		Cleaned up various routines in the
	* generic/tclCkalloc.c:		call stacks for memory allocation to
	* generic/tclParse.c:		guarantee that any size values computed
	* generic/tclThreadAlloc.c:	are within the domains of the routines
	they get passed to.  [Bugs 2557696 and 2557796].

2009-09-18  Don Porter  <dgp@users.sourceforge.net>
