@@ -1,3 +1,11 @@
+2009-11-09  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/tclBasic.c (TclEvalObjEx): Moved the #280 decrement of
+	refCount for the file path out of the branch after the whole
+	conditional, closing a memory leak. Added clause on structure type
+	to prevent seg.faulting. Backport from valgrinding the Tcl 8.5
+	branch.
+
 2009-10-23  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclCompCmds.c: [Bug 2881263] (TclCompileForeachCmd,
